@@ -55,7 +55,7 @@
 
 static char CURSOR_UP[20] = { ESC, '[', 'A', 0 };
 static char KILL_LINE[20] = { ESC, '[', 'J', 0 };
-
+static char *savelex = NIL(char*);
 
 
 #if SHOPT_MULTIBYTE
@@ -230,6 +230,8 @@ int tty_set(int fd, int action, struct termios *tty)
 void tty_cooked(register int fd)
 {
 	register Edit_t *ep = (Edit_t*)(shgd->ed_context);
+	if(ep->sh->st.trap[SH_KEYTRAP] && savelex)
+		memcpy(ep->sh->lex_context,savelex,ep->sh->lexsize);
 	ep->e_keytrap = 0;
 	if(ep->e_raw==0)
 		return;
@@ -844,6 +846,12 @@ void	ed_setup(register Edit_t *ep, int fd, int reedit)
 		while(n-- > 0)
 			ep->e_lbuf[n] = *pp++;
 		ep->e_default = 0;
+	}
+	if(ep->sh->st.trap[SH_KEYTRAP])
+	{
+		if(!savelex)
+			savelex = (char*)sh_malloc(shp->lexsize);
+		memcpy(savelex, ep->sh->lex_context, ep->sh->lexsize);
 	}
 }
 #endif /* SHOPT_ESH || SHOPT_VSH */
